update image and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <div style="display: flex; flex-wrap: wrap; gap: 10px">
             <div v-for="lessons in lessons" style="border: 5px solid blue; width: 150px; background-color: lightblue">
                 <figure>
+                        <img v-bind:src="lessons.image" width="100px">
                 </figure>
                 <p><b>Subject: {{lessons.Subject}}</b></p>
                 <p><strong>Location: {{lessons.Location}}</strong></p>
