--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
                         <p><b>Space: {{lessons.Space}}</b></p>
                         <button v-on:click="addToCart(lessons)" :disabled="!canAddToCart(lessons)"><span class="fas fa-cart-plus">
                             </span>Add to Cart</button>
-                        <span v-if="lessons.Space - cartCount(lessons) === 0">All Out!</span>
-                        <span v-else-if="lessons.Space - cartCount(lessons) < 5">
-                            Only{{lessons.Space - cartCount(lessons)}} left!</span>
+                        <span v-if="lessons.Space - cartCount(id) === 0">All Out!</span>
+                        <span v-else-if="lessons.Space - cartCount(id) < 10">
+                            Only{{lessons.Space - cartCount(id)}} left!</span>
                         <span v-else>Buy Now!</span>
                     </div>
                 </div>
             </div>
+
 
             <div v-else>
                 <div style="display: flex; flex-wrap: wrap; gap: 10px">
@@ -65,20 +66,31 @@
                         <p><strong>Location: {{lessons.Location}}</strong></p>
                         <p><b>Price: {{lessons.price}}</b></p>
                         <p><b>Space: {{lessons.Space}}</b></p>
-                        <button @click="del(cart)"><span class="fas fa-cart-arrow-down"></span>Delete</button>
+                        <!-- <button @click="deleteLesson(lesson)"><span class="fas fa-cart-arrow-down"></span>Delete</button> -->
                     </div>
                 </div>
 
+                
                 <h1>Checkout</h1>
-                <p><strong>First Name:</strong>
-                    <input v-model="order.Name" /></p>
-                <p><strong>Phone number:</strong>
-                    <input v-model.number="order.Phonenumber" />
-                </p>
-                <h2>Order Information</h2>
-                <p>Name: {{order.Name}}</p>
-                <p>Phone number: {{order.Phonenumber}}</p>
-                <button @click='submit' type="submit">Checkout</button>
+                <form @submit="submit()">
+                    <p>
+                        <strong>First Name:</strong>
+                        <input v-model="order.FirstName" title="Letters only." required />
+                    </p>
+                    <p>
+                        <strong>Second Name:</strong>
+                        <input v-model="order.SecondName" title="Letters only." required />
+                    </p>
+                    <p>
+                        <strong>Phone Number:</strong>
+                        <input v-model="order.Phonenumber" minlength="10" title="Numbers only." required />
+                    </p>
+                    <h2>Order Information</h2>
+                    <p>Name: {{order.FirstName}}</p>
+                    <p>Name: {{order.SecondName}}</p>
+                    <p>Phone number: {{order.Phonenumber}}</p>
+                    <button :disabled='!valid' type="submit">Checkout</button>
+                </form>
             </div>
         </main>
     </div>
@@ -89,67 +101,82 @@
         el: '#app',
         data: {
             sitename: "After School Lessons",
-                showProduct: true,
-                order: {
-                    Name: '',
-                    Phonenumber: '',
-                },
-                lessons: [],
-                cart: []
+            showProduct: true,
+            order: {
+                FirstName: '',
+                SecondName: '',
+                Phonenumber: '',
+            },
+            lessons: [],
+            cart: []
         },
         methods: {
-                addToCart(lessons) {
-                    this.cart.push(lessons);
 
-                },
-                showCheckout() {
-                    this.showProduct = this.showProduct ? false : true;
-                },
-
-                canAddToCart(lessons) {
-                    return lessons.Space > this.cartCount(lessons);
-                },
-                cartCount(id) {
-                    let count = 0;
-                    for (let i = 0; i < this.cart.length; i++) {
-                        if (this.cart[i] === id) {
-                            count++;
-                        }
-                    }
-                    return count;
-                },
-                submit() {
-                    if (this.order.Name && this.order.Phonenumber) {
-                        alert("Order Submited")
-                    }
-                    else {
-                        alert("Order Required")
-                    }
-                },
-                del(cart) {
-                    this.cart.splice(cart, 1)
-                },
-                sortTable(key, direction) {
-                    this.sort = `${key} > ${direction}`
-                    if (direction === 'asc') {
-                        this.lessons.sort((a, b) => a[key] > b[key] ? 1 : -1)
-                    } else {
-                        this.lessons.sort((a, b) => a[key] < b[key] ? 1 : -1)
-                    }
+            addToCart(lessons) {
+                if ('canAddToCart(lessons') {
+                    this.cart.push(lessons)
+                    lessons.Space--;
                 }
             },
-            computed: {
-                cartItemCount() {
-                    return this.cart.length || '';
-                },
+            canAddToCart(lessons) {
+                return lessons.Space;
             },
-        
+
+            cartCount(id) {
+                let count = 0;
+                for (let i = 0; i < this.cart.length; i++) {
+                    if (this.cart[i] === id) {
+                        count++;
+                    }
+                }
+                return count;
+            },
+
+            submit() {
+                if (this.cart.length > 0) {
+                    window.alert("Order Submited")
+                }
+            },
+
+            // deleteLesson(lessons) {
+            //     var idx = this.cart.indexOf(lessons)
+            //     this.cart.splice(idx, 1)
+            //     lessons.Space++;
+            // },
+
+
+            showCheckout() {
+                this.showProduct = this.showProduct ? false : true;
+            },
+
+            sortTable(key, direction) {
+                this.sort = `${key} > ${direction}`
+                if (direction === 'asc') {
+                    this.lessons.sort((a, b) => a[key] > b[key] ? 1 : -1)
+                } else {
+                    this.lessons.sort((a, b) => a[key] < b[key] ? 1 : -1)
+                }
+            }
+        },
+        computed: {
+            cartItemCount() {
+                return this.cart.length || '';
+            },
+            valid: function () {
+                var TxtValid = /^[a-zA-Z]+$/
+                var IntValid = /^\d+$/
+                if (TxtValid.test(this.order.FirstName) && TxtValid.test(this.order.SecondName)
+                    && IntValid.test(this.order.Phonenumber) && (this.cart.length > 0)) {
+                    return true;
+                }
+            },
+        },
         created: function () {
             console.log("requesting data from server...");
 
             fetch('https://coursework2-lession.herokuapp.com/').then(res => res.text())
-            .then (txt => console.log('server message: ', txt)
-            )
+                .then(txt => console.log('server message: ', txt)
+                )
 
             fetch("https://coursework2-lession.herokuapp.com/collection/lesson").then(
                 function (res) {
