--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Lessons</title>
     <script src="https://unpkg.com/vue"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 
 <body>
@@ -136,7 +137,7 @@
                     FirstName: this.order.FirstName,
                     SecondName: this.order.SecondName,
                     Phonenumber: this.order.Phonenumber,
-                    SpaceOrdered: this.l.Space,
+                    SpaceOrdered: this.order.Space,
                 };
 
                 // set the url to your server and route
